[gd_scene load_steps=7 format=3 uid="uid://dno3xayr4enuk"]

[ext_resource type="Script" path="res://Script/Easy.gd" id="1_lxxx0"]
[ext_resource type="PackedScene" uid="uid://b4lrqmiaibjj" path="res://Scene/Character.tscn" id="2_asrjs"]

[sub_resource type="LabelSettings" id="LabelSettings_s35py"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_mgi74"]
font_size = 23

[sub_resource type="GDScript" id="GDScript_pc423"]
script/source = "extends Control

var input_player
# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


func _on_btn_1_pressed():
	if input_player.length() < 4:
		input_player += \"1\"
	print(\"Player input code: \", input_player)


func _on_btn_0_pressed():
	if input_player.length() < 4:
		input_player += \"0\"
	print(\"Player input code: \", input_player)
	


func _on_btn_submit_pressed():
	pass # Replace with function body.
"

[sub_resource type="LabelSettings" id="LabelSettings_v3j3x"]
font_size = 23

[node name="Node" type="Node"]
script = ExtResource("1_lxxx0")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.5
offset_top = 126.0
offset_right = 100.5
offset_bottom = 217.0
grow_horizontal = 2
text = "Easy Mode"
label_settings = SubResource("LabelSettings_s35py")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Input_Number" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 872.0
offset_top = 363.0
offset_right = 1004.0
offset_bottom = 439.0

[node name="ScoreLabel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 894.0
offset_top = 49.0
offset_right = 1084.0
offset_bottom = 119.0
label_settings = SubResource("LabelSettings_mgi74")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OrderLabel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 656.0
offset_top = 279.0
offset_right = 760.0
offset_bottom = 339.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTimer" type="Timer" parent="TextureRect"]

[node name="CustomerTimer" type="Timer" parent="TextureRect"]

[node name="Control" type="Control" parent="TextureRect"]
z_index = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = SubResource("GDScript_pc423")

[node name="btn_1" type="Button" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 945.0
offset_top = 472.0
offset_right = 1010.0
offset_bottom = 532.0
text = "1"

[node name="btn_0" type="Button" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 869.0
offset_top = 472.0
offset_right = 928.0
offset_bottom = 531.0
text = "0"

[node name="btn_submit" type="Button" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 874.0
offset_top = 555.0
offset_right = 1007.0
offset_bottom = 605.0
text = "submit"

[node name="backspace" type="Button" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 1041.0
offset_top = 512.0
offset_right = 1103.0
offset_bottom = 574.0
text = "âŒ«"

[node name="CustomerContainer" type="Node2D" parent="TextureRect"]

[node name="CustomerInstance" parent="TextureRect/CustomerContainer" instance=ExtResource("2_asrjs")]

[node name="TimeLeftLabel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 97.0
offset_top = 49.0
offset_right = 287.0
offset_bottom = 119.0
label_settings = SubResource("LabelSettings_v3j3x")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="TextureRect/GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="TextureRect/CustomerTimer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="TextureRect/Control/btn_1" to="." method="_on_btn_1_pressed"]
[connection signal="pressed" from="TextureRect/Control/btn_0" to="." method="_on_btn_0_pressed"]
[connection signal="pressed" from="TextureRect/Control/btn_submit" to="." method="_on_btn_submit_pressed"]
[connection signal="pressed" from="TextureRect/Control/backspace" to="." method="_on_backspace_pressed"]
